# bb

./: .gitignore  NOTE.md  README.md  TEACH.md
.github/workflows/: build.yml  main.yml
book/: README.md
ch08/: README.md
ch08/ai/appraisal/: README.md
ch08/ai/tech/: REFERENCE.md
ch08/correctness/: CORRECTNESS.md
ch08/correctness/property/: DEMO.html  README.md
ch08/correctness/smt/: PROJECTS.md
ch08/sec8.1/combinations/: README.md
ch08/sec8.1/systemic/: README.md
ch08/sec8.7/ml/: DEEP.md
code/ch01/: vm1.c
code/ch02/: mem.c
teach/: CRITIQUE.md  FAQ.md  LEARN.md  MISUSE.md  NOTE.md  README.md  REFLECTIONS.md  TEACH.md
workbook/: NOTE.md  README.md
workbook/ch01/: 1-COMPLEMENT.md  ENDIANESS.md  EXERCISES.md  README.md  REFERENCE.md  vm1.c
workbook/ch01/base/: BCD.md  GRAY.md  README.md
workbook/ch01/big/: big.c
workbook/ch01/discussion/: REFLECTIONS.md
workbook/ch01/hamming/: README.md
workbook/ch01/koch/: README.md
workbook/ch01/numbers/: FLOAT.md  README.md
workbook/ch01/projects/: EXERCISES.md  FLOATING.md
workbook/ch01/reference/: REFERENCE.md
workbook/ch01/sec1.1/: ROUTES.md
workbook/ch02/: README.md  REFERENCE.md  regvm.md  vm1.h  vm1.md
workbook/ch02/cuda/: CUDA.md  HIGHLEV.md
workbook/ch02/discussion/: README.md
workbook/ch02/fm/: FM.md
workbook/ch02/harvard/: README.md
workbook/ch02/micro/: MICRO.md
workbook/ch02/neumann/: README.md
workbook/ch02/sm/: README.md  SSM.md
workbook/ch03/: README.md  REFERENCE.md
workbook/ch03/basic/: README.md
workbook/ch03/ci/: README.md  main.py
workbook/ch03/confusion/: CONFUSION.md
workbook/ch03/dandc/: DANDC.md  binsearch.c  mergesort.c
workbook/ch03/discussion/: README.md
workbook/ch03/dyn/: COINS.md  ELEV.md  GRID.md  NOTE.md  PROJECTS.md  README.md  a.out  cointab.py  dqn.py  mgrid.py  naivecoin.py
workbook/ch03/fuzzmut/: README.md
workbook/ch03/make/: Makefile  README.md
workbook/ch03/mnist/: MNIST.md  mnist.py
workbook/ch03/optimal/: DONALD.md  Makefile  OPT.md  README.md  array.c  array.sh  bits.c  compute.c  matrix.c  sort.py
workbook/ch03/perceptron/: PERCEPT.md  PERCEPTRON.md  PROJECTS.md  README.md  generate.py  percept.py
workbook/ch03/tdd/: README.md
workbook/ch03/testvm/: README.md  testvm.py
workbook/ch03/tictac/: README.md
workbook/ch03/tictactoe/: README.md  SOCIAL.md
workbook/ch03/tools/: README.md
workbook/ch03/ttd/: TTD.md
workbook/ch04/: LIST.md  MOORE.md  README (kopia).md  README.md  REPERENCE.md
workbook/ch04/2fa/: python_client.py  token_service.py
workbook/ch04/2faa/: auth_server.py  python_client.py
workbook/ch04/blink/: README.md
workbook/ch04/cep/: PROJECTS.md  README.md
workbook/ch04/cores/: README.md
workbook/ch04/cube/: CMakeLists.txt  README.md  main.c
workbook/ch04/db/: README.md
workbook/ch04/discussion/: README.md
workbook/ch04/display/: README.md  ideas.md  image_protocol.py  ppm_utils.py
workbook/ch04/display/api/: CMakeLists.txt  display.c
workbook/ch04/display/api/01/: display.c  example.c
workbook/ch04/display/api/01a/: display_api.c
workbook/ch04/display/api/03/: display.c  multicore_graphics.c
workbook/ch04/display/api/04/: graphics_engine.c  graphics_engine2.c
workbook/ch04/display/api2/pack/c/01a/: CMakeLists.txt
workbook/ch04/display/drivers/pack/02/: CMakeLists.txt  README.md  engine.c  main.c
workbook/ch04/display/drivers/pack/c/tankwar/: CMakeLists.txt  display.c  display.cc  display.h  main.c  tankwar.c
workbook/ch04/display/drivers/pending/03/: CMakeLists.txt
workbook/ch04/display/games/c/02/: CMakeLists.txt  README.md  mario.c  mario.h  race.c  tetris.c
workbook/ch04/energy/: interrupt.c
workbook/ch04/errors/: README.md  display.c  display.h
workbook/ch04/extend/: README.md
workbook/ch04/file/: HIERARCHY.md  README.md  SIMPLE.md
workbook/ch04/intro/: README.md
workbook/ch04/keyboard/: CMakeLists.txt  keys.py  main.c
workbook/ch04/machine/: README.md
workbook/ch04/optimisation/: README.md  inv_opt.py
workbook/ch04/os/: ideas.md  tdos.md  tinyos.md
workbook/ch04/pico/: PROJECTS.md
workbook/ch04/pio/: emu2040pio.py
workbook/ch04/practice/: README.md
workbook/ch04/rsa/: a.out
workbook/ch04/sap/: INSTRUCTIONS.md  README.md  sap_vm_samples.c
workbook/ch04/sd/: README.md
workbook/ch04/sec4.2.2/: README.md
workbook/ch04/sec4.6/secure/c/old-boot/: CMakeLists.txt  display.c  main.c
workbook/ch04/sec4.6/secure/c/side/: CMakeLists.txt  README.md  main.c
workbook/ch04/sec4.6/secure/micropython/old/c/diffie/: CMakeLists.txt  initiator.c  responder.c
workbook/ch04/sec4.7/: fern.py  gray_fern.py
workbook/ch04/sensors/: BMP280.md  BMP390.md  README.md
workbook/ch04/state/: README.md  fib_sm.c
workbook/ch04/storage/: HISTORY.md  README.md
workbook/ch04/temperature/: BMP280.md  README.md
workbook/ch04/vm/: README.md
workbook/ch04/web/: README.md
workbook/ch04/wire/: README.md
workbook/ch04/wire/full/c/: BUILD.md  CMakeLists-1.txt  CMakeLists.txt  controller.c  full_duplex.c
workbook/ch04/wireless/: README.md
workbook/ch05/: README.md  REFERENCE.md  simple_compiler.py
workbook/ch05/01/: main.py
workbook/ch05/8/: prolog.py
workbook/ch05/addition/: COMPILERS.md
workbook/ch05/bottomup/: LR.md
workbook/ch05/classic/: PROBLEMS.md  README.md
workbook/ch05/code/: README.md  SECD.md  secd.py
workbook/ch05/discussion/: README.md
workbook/ch05/sec5.12/rpi-pico-2/pico/: CMakeLists.txt  display.h  pico_program.c
workbook/ch06/: CLEAN.md  CODE.md  DEVEL.md  KAHNEMAN.md  KAHNEMAN2.md  PARAPHRASE.md  README.md  REFERENCE.md  SUSTAIN.md
workbook/ch07/: INTERFACE.md  README.md  REFERENCE.md  TYPES.md
workbook/ch07/addition/linear/cut/: CMakeLists.txt  cut_elimination.c
workbook/ch07/addition/linear/game/: CMakeLists.txt  GAME.md  display.c  linear_logic_game.c
workbook/ch07/addition/linear/tensor/: CMakeLists.txt  display.h  tensor_proof_nets.c
workbook/ch08/: LIMITS.md  NOICE.md  OPT.md  RANDOM.md  README.md  REFERENCE.md
workbook/code/: README.md
workbook/projects/: README.md
(+4078 files in other folders)
